# gPb-GSoC

./: .gitmodules  CMakeLists.txt  README.md  demo.py
opencv_gpb/: CMakeLists.txt  Makefile
opencv_gpb/include/gPb/: globalPb.h
opencv_gpb/include/seg/: VisWatershed.h  contour2ucm.h
opencv_gpb/src/: main.cpp
src/: CMakeLists.txt  gpb.cpp  gpb.h  main.cpp  process.cpp  process.h  pygpb.cpp  setup.py.in
src/includes/: VisWatershed.h  affinity.h  array.h  buildW.h  contour2ucm.h  filters.h  globalPb.h  normCut.h  smatrix.h  ucm_mean_pb.h  uvt.h
src/src/: affinity.cpp  contour2ucm.cpp  filters.cpp  globalPb.cpp  watershed.cpp
